<resources>
    <string name="app_name">task</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_bottom_nav">bottom_nav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="aboutyuvasarathi">AboutYuvaSarathi</string>
    <string name="governing_body">Governing Body</string>
    <string name="corporators_information">Corporators Information</string>
    <string name="zone_information">Zone Information</string>
    <string name="city_information">City Information</string>
    <string name="tourism_information">Tourism Information</string>
    <string name="mobile_app_information">Mobile App Information</string>
    <string name="about_yuvasarathi">About YuvaSarathi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title">select</string>
    <string-array name="items">
        <item>Signup with</item>
        <item>Normal user</item>
        <item>Industrial person</item>

    </string-array>

    //privacy policy strings
    <string name="Privacy_policy">  The innovative solutions built the Yuva Sarthi app as an Open Source app. This SERVICE is provided by The innovative Solutions at no cost and is intended for use as is. </string>
    <string name="Privacy_policy1">  This page is used to inform visitors regarding our policies with the collection \ use  and disclosure of Personal Information if anyone decided to use our Service. \n  If you choose to use our Service\ then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.\n   The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are accessible at Yuva Sarthi unless otherwise defined in this Privacy Policy.</string>

    <string name="information">  For a better experience\ while using our Service\ we may require you to provide us with certain personally identifiable information\ including but not limited to Commercial use. The information that we request will be retained by us and used as described in this privacy policy.\n  The app does use third-party services that may collect information used to identify you.\n  Link to the privacy policy of third-party service providers used by the app \n\n Google Play Services\n Google Analytics for Firebase\n Firebase Crashlytics\n Facebook\nLog Data\n\n  We want to inform you that whenever you use our Service\ in a case of an error in the app we collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address\ device name\ operating system version\ the configuration of the app when utilizing our Service\ the time and date of your use of the Service\ and other statistics.</string>
    <string name="cookies">  Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your devices internal memory.\n  This Service does not use these “cookies” explicitly. However, the app may use third-party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</string>
    <string name="service_provider">  We may employ third-party companies and individuals due to the following reasons:\n\n To facilitate our Service;\n To provide the Service on our behalf;\n To perform Service-related services; or\n To assist us in analyzing how our Service is used.\n  We want to inform users of this Service that these third parties have access to their Personal Information. The reason is to perform the tasks assigned to them on our behalf. However\ they are obligated not to disclose or use the information for any other purpose.</string>
    <string name="security">  We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet\ or method of electronic storage is 100% secure and reliable\ and we cannot guarantee its absolute security.</string>
    <string name="link_to_other">  This Service may contain links to other sites. If you click on a third-party link\ you will be directed to that site. Note that these external sites are not operated by us. Therefore\ we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content\ privacy policies\ or practices of any third-party sites or services.</string>
    <string name="children">  These Services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13 years of age. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information\ please contact us so that we will be able to do the necessary actions.</string>
    <string name="changes">  We may update our Privacy Policy from time to time. Thus\ you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page.\n  This policy is effective as of 2023-04-19</string>
    <string name="contact">  If you have any questions or suggestions about our Privacy Policy\ do not hesitate to contact us at theinnovative.solutions20@gmail.com</string>
</resources>