<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".aboutus">


    <TextView
        android:id="@+id/About_Yuva_Sarathi"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bkg"
        android:drawablePadding="8dp"
        android:hint="@string/about_yuvasarathi"
        android:padding="8dp"
        android:textColorHint="#448AFF"
        android:textSize="23sp"
        app:drawableLeftCompat="@drawable/baseline_info_24"
        app:drawableRightCompat="@drawable/baseline_arrow_forward_ios_24" />

    <TextView
        android:id="@+id/governing_body_title"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bkg"
        android:drawablePadding="8dp"
        android:hint="@string/governing_body"
        android:padding="8dp"
        android:textColorHint="#448AFF"
        android:textSize="23sp"
        app:drawableLeftCompat="@drawable/baseline_info_24"
        app:drawableRightCompat="@drawable/baseline_arrow_forward_ios_24" />

    <TextView
        android:id="@+id/corporators_info_title"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bkg"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:hint="@string/corporators_information"
        android:textColorHint="#448AFF"
        android:textSize="23sp"
        app:drawableLeftCompat="@drawable/baseline_info_24"
        app:drawableRightCompat="@drawable/baseline_arrow_forward_ios_24" />
    <TextView
        android:id="@+id/zone_info_title"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bkg"
        android:drawablePadding="8dp"
        android:hint="@string/zone_information"
        android:padding="8dp"
        android:textColorHint="#448AFF"
        android:textSize="23sp"
        app:drawableLeftCompat="@drawable/baseline_info_24"
        app:drawableRightCompat="@drawable/baseline_arrow_forward_ios_24" />
    <TextView
        android:id="@+id/city_info_title"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bkg"
        android:drawablePadding="8dp"
        android:hint="@string/city_information"
        android:padding="8dp"
        android:textColorHint="#448AFF"
        android:textSize="23sp"
        app:drawableLeftCompat="@drawable/baseline_info_24"
        app:drawableRightCompat="@drawable/baseline_arrow_forward_ios_24" />
    <TextView
        android:id="@+id/tourism_info_title"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bkg"
        android:drawablePadding="8dp"
        android:hint="@string/tourism_information"
        android:padding="8dp"
        android:textColorHint="#448AFF"
        android:textSize="23sp"
        app:drawableLeftCompat="@drawable/baseline_info_24"
        app:drawableRightCompat="@drawable/baseline_arrow_forward_ios_24" />
    <TextView
        android:id="@+id/mobile_app_title"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bkg"
        android:drawablePadding="8dp"
        android:hint="@string/mobile_app_information"
        android:padding="8dp"
        android:textColorHint="#448AFF"
        android:textSize="23sp"
        app:drawableLeftCompat="@drawable/baseline_info_24"
        app:drawableRightCompat="@drawable/baseline_arrow_forward_ios_24" />

</LinearLayout>



